idea/duration/duration.component.scss
.durationItem {
  .value {
    max-width: none;
    pointer-events: all;
    ion-input {
      display: inline-block;
      max-width: 35px;
      text-align: right;
    }
    ion-text {
      margin-left: 10px;
      margin-right: 20px;
      font-size: 0.8em;
    }
  }
}

